Wire up last-edited date.
Change-Id: Ifc33216b7ef00f3791c9dbfec575b037558b15f5

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -767,6 +767,8 @@
         <item quantity="one">%d day</item>
         <item quantity="other">%d days</item>
     </plurals>
+    <string name="suggested_edits_last_edited">Last edited</string>
+    <string name="suggested_edits_last_edited_never">Never</string>
     <!-- /Suggested edits -->
 
     <!-- Description editing revert help -->
