--- a/app/src/main/res/values-qq/strings.xml
+++ b/app/src/main/res/values-qq/strings.xml
@@ -749,6 +749,8 @@
     <item quantity="one">Label text to show the length of the edit streak in number of days. %d is for one dat.</item>
     <item quantity="other">Label text to show the length of the edit streak in number of days. %d is for many days</item>
   </plurals>
+  <string name="suggested_edits_last_edited">This refers to the date when the user made their last edit.</string>
+  <string name="suggested_edits_last_edited_never">Displayed when the user has never made an edit.</string>
   <string name="description_edit_revert_subtitle">Subtitle in the dialog that informs the user that their edit was reverted.</string>
   <string name="description_edit_revert_intro">Introduction message informing the user that their edit was reverted, and leading into possible reasons for the revert.</string>
   <string name="description_edit_revert_reason1">Reason for an edit being reverted, because it did not follow the guidelines for descriptions. (Please preserve the anchor tag and formatted symbol (%1$s) in its exact form)</string>
