No longer load Main Page in empty tabs.
Change-Id: I551d5b4e8579ab0fafc2663bbe124586d7b82db8

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -339,6 +339,8 @@
     <string name="preference_title_prefer_offline_content">Prefer offline content</string>
     <string name="preference_summary_prefer_offline_content">Save data usage by loading articles that are available offline rather than always loading the latest version of an article</string>
     <string name="theme_chooser_dialog_match_system_theme_switch_label">Match system theme</string>
+    <string name="empty_tab_title">New tab</string>
+    <string name="empty_tab_description">Please use the Search button in the toolbar to look for something interesting!</string>
 
     <!-- Crash reporter -->
     <string name="crash_report_activity_title">Application error</string>
