--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -340,6 +340,7 @@
     <string name="theme_chooser_dialog_match_system_theme_switch_label">Match system theme</string>
     <string name="page_footer_license_text">Content is available under $1 unless otherwise noted</string>
     <string name="empty_tab_title">New tab</string>
+    <string name="menu_save_all_tabs">Save all tabs</string>
 
     <!-- Crash reporter -->
     <string name="crash_report_activity_title">Application error</string>
