--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -500,6 +500,7 @@
     <string name="notification_syncing_resume_button">Resume</string>
     <string name="notification_syncing_cancel_button">Cancel</string>
     <string name="notification_syncing_reading_list_channel_description">Syncing Reading Lists progress</string>
+    <string name="notification_many_unread">You have %d unread notifications</string>
     <plurals name="notification_channel_name">
         <item quantity="one">Downloading article</item>
         <item quantity="other">Downloading articles</item>
