--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -488,6 +488,7 @@
     <string name="reading_list_remove_from_offline_cancel_button_text">Cancel</string>
     <string name="reading_list_download_using_mobile_data_cancel_button_text">Cancel</string>
     <string name="reading_list_split_dialog_ok_button_text">OK</string>
+    <string name="reading_list_page_conversion_not_complete_message">We are in the process of converting your saved pages to a new format. Please try again after some time. It is not required to be online for this conversion.</string>
     <!-- /Reading lists -->
 
     <!-- User options -->
