Fix dismissal snackbar for empty tab.
Change-Id: I73213640f370f615c3a38942e6bef7363d515bea

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -294,6 +294,7 @@
     <string name="close_all_tabs_confirm_yes">Yes</string>
     <string name="close_all_tabs_confirm_no">No</string>
     <string name="button_close_tab">Close tab</string>
+    <string name="unnamed_tab_closed">Tab closed.</string>
     <string name="tab_item_closed">%s closed.</string>
     <string name="all_tab_items_closed">All tabs closed.</string>
     <string name="tool_tip_bookmark_icon_title">Add to reading list</string>
