--- a/app/src/main/res/values-qq/strings.xml
+++ b/app/src/main/res/values-qq/strings.xml
@@ -310,6 +310,7 @@
   <string name="close_all_tabs_confirm_yes">Affirmative answer to closing all tabs.\n{{Identical|Yes}}</string>
   <string name="close_all_tabs_confirm_no">Negative answer to closing all tabs.\n{{Identical|No}}</string>
   <string name="button_close_tab">Text hint for the button used for closing a tab.</string>
+  <string name="unnamed_tab_closed">Message shown when an untitled tab is closed.</string>
   <string name="tab_item_closed">Message shown when a tab is closed. The %s symbol is replaced with the name of the article in the tab.</string>
   <string name="all_tab_items_closed">Message shown when all tabs are closed.</string>
   <string name="tool_tip_bookmark_icon_title">Title for tool-tip that introduces the user to the bookmark icon for saving the article to reading lists.</string>
