--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -733,6 +733,7 @@
     <string name="suggested_edits_article_cta_snackbar_action">View</string>
     <string name="suggested_edits_feed_card_add_image_caption">Add image caption</string>
     <string name="suggested_edits_feed_card_translate_image_caption">Add image caption (%s)</string>
+    <string name="suggested_edits_feed_card_add_image_tags">Add image tags</string>
     <string name="suggested_edits_snackbar_survey_text">How was your editing experience? Please take a moment to fill out the survey about in-app editing.</string>
     <string name="suggested_edits_snackbar_survey_action_text">Take Survey</string>
     <string name="suggested_edits_task_action_text_add">Add</string>
