--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -741,8 +741,8 @@
     <string name="suggested_edits_image_tags">Image tags</string>
     <string name="suggested_edits_image_tags_publishing">Publishing</string>
     <string name="suggested_edits_image_tags_published">Published</string>
-    <string name="suggested_edits_image_tags_onboarding_title">Tag images to make them easier for others to find</string>
-    <string name="suggested_edits_image_tags_onboarding_text">By confirming suggested tags, you can help make images easier to search for.\n\nTags are computer suggested but need to be validated by humans to ensure accuracy.</string>
+    <string name="suggested_edits_image_tags_onboarding_title">Tagging images makes them easier to find.</string>
+    <string name="suggested_edits_image_tags_onboarding_text">The following images have tags suggested by a computer, and need to be validated by a human to ensure accuracy.\n\nBy confirming tags, you will help make images easier to search for on Commons, the free license image repository that Wikipedia uses for images in its articles.</string>
     <string name="suggested_edits_image_tags_onboarding_note">Only tags that you choose will be added to images.</string>
     <string name="suggested_edits_image_tags_snackbar">Add image tags to make them easier for others to find.</string>
     <string name="suggested_edits_image_tags_task_detail">Tag images to make them easier for others to find. They are computer suggested, but need to be validated.</string>
