--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -711,7 +711,7 @@
     <string name="suggested_edits_feed_card_title">Suggested edits</string>
     <string name="suggested_edits_feed_card_add_description_button">Add article description</string>
     <string name="suggested_edits_feed_card_add_translation_in_language_button">Add article description (%s)</string>
-    <string name="suggested_edits_tutorial_message">Welcome to the new home for quick editing in the Wikipedia app. Your contributions are much appreciated. Happy editing!</string>
+    <string name="suggested_edits_onboarding_text">Hi %s, did you know that everyone can edit Wikipedia? Suggested edits offers you fun ways to help improve Wikipedia. Happy editing!</string>
     <string name="suggested_edits_tasks_onboarding_get_started">Get started</string>
     <string name="suggested_edits_image_preview_dialog_caption_in_language_title">Image caption (%s)</string>
     <string name="suggested_edits_image_preview_dialog_description_in_language_title">Image description (%s)</string>
