--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -671,6 +671,8 @@
     <string name="suggested_edits_add_image_captions">Add image captions</string>
     <string name="suggested_edits_translate_image_captions">Translate image captions</string>
     <string name="suggested_edits_tag_images">Tag images</string>
+    <string name="suggested_edits_vandalism_patrol">Vandalism patrol</string>
+    <string name="suggested_edits_vandalism_patrol_skip">Skip</string>
     <string name="suggested_edits_review_description">Review article description</string>
     <string name="suggested_edits_add_description_button">Add description</string>
     <string name="suggested_edits_edit_description_button">Edit description</string>
