--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -344,6 +344,8 @@
     <string name="page_footer_license_text">Content is available under $1 unless otherwise noted</string>
     <string name="empty_tab_title">New tab</string>
     <string name="menu_save_all_tabs">Save all tabs</string>
+    <string name="save_all_tabs_success_message">Successfully added all articles in open tabs to %s.</string>
+    <string name="save_all_tabs_articles_already_exist_message">All good! %s already contains all articles in open tabs</string>
 
     <!-- Crash reporter -->
     <string name="crash_report_activity_title">Application error</string>
