--- a/app/src/main/res/values-qq/strings.xml
+++ b/app/src/main/res/values-qq/strings.xml
@@ -860,6 +860,6 @@
   <string name="custom_date_picker_dialog_cancel_button_text">Negative action button text in date picker pop-up dialog.\n{{Identical|Cancel}}</string>
   <string name="save_all_tabs_success_message">Message shown when articles in open tabs are successfully added to a reading list. The \"%s\" symbol is replaced with the name of the reading list.</string>
   <string name="reading_list_articles_already_exist_message">Message shown to users when they try to add already existing articles to a reading list. The \"%s\" symbol is replaced with the name of the reading list.</string>
-  <string name="reading_list_article_added_to_named">Message shown to user when an article gets suffessfully added to a readingList.The first \"%s\" symbol is replaced with the name of the article and the second \"%s\" symbol is replaced with the name of the reading list.</string>
-  <string name="reading_list_article_already_exists">Message shown to users when they try to add an already existing article to a reading list.The first \"%s\" symbol is replaced with the name of the reading list and the second \"%s\" symbol is replaced with the name of the article.</string>
+  <string name="reading_list_article_added_to_named">Message shown to user when an article gets suffessfully added to a readingList.The %1$s symbol is replaced with the name of the article and the second %2$s symbol is replaced with the name of the reading list.</string>
+  <string name="reading_list_article_already_exists">Message shown to users when they try to add an already existing article to a reading list.The first %1$s symbol is replaced with the name of the reading list and the second %2$s symbol is replaced with the name of the article.</string>
 </resources>
