--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -380,7 +380,7 @@
     <string name="reading_list_save_to">Save to reading list</string>
     <string name="reading_list_create_new">Create new</string>
     <string name="reading_list_title_exists">Reading list \"%s\" already exists.</string>
-    <string name="reading_list_article_added_to_named">Successfully added %1$s to %2$s.</string>
+    <string name="reading_list_article_added_to_named">Added %1$s to %2$s.</string>
     <string name="reading_list_article_already_exists_message">All good! %1$s already contains %2$s.</string>
     <string name="reading_list_articles_already_exist_message">All good! %s already contains all articles.</string>
     <string name="reading_list_added_view_button">View list</string>
@@ -438,7 +438,7 @@
     <string name="reading_lists_confirm_remote_delete_yes">Yes</string>
     <string name="reading_lists_confirm_remote_delete_no">No</string>
     <string name="reading_list_article_save_in_progress">The article is being downloaded, and it will be available offline when complete.</string>
-    <string name="reading_list_articles_added_to_named">Successfully Added %1$d articles to %2$s</string>
+    <string name="reading_list_articles_added_to_named">Added %1$d articles to %2$s</string>
     <string name="reading_list_delete_confirm">Are you sure you want to delete %s?</string>
     <string name="reading_list_preference_login_to_enable_sync_dialog_title">Log in to enable sync</string>
     <string name="reading_list_preference_login_to_enable_sync_dialog_text">Log in to allow your reading lists to be saved to your account.</string>
