--- a/app/src/main/res/values-qq/strings.xml
+++ b/app/src/main/res/values-qq/strings.xml
@@ -861,4 +861,5 @@
   <string name="suggested_edits_contributions_type">Text indicating the type of user edit. %1$s is the typ and %2$s indicates the language</string>
   <string name="suggested_edits_type_image_tag">Text indicating that the user edit was an Image tag edit</string>
   <string name="suggested_edits_contributions_screen_title">Contributions screen title text. The %s symbol is replaced with the username.</string>
+  <string name="suggested_edits_spinner_item_text">Contributions filter dropdown item text. %d represents the count of the edit type. %s is the type of the edit.</string>
 </resources>
