--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -781,10 +781,10 @@
     <string name="suggested_edits_reactivation_notification_title">Suggested edits</string>
     <string name="suggested_edits_reactivation_notification_stage_one">Thanks for editing Wikipedia! Why not continue where you left off?</string>
     <string name="suggested_edits_reactivation_notification_stage_two">Have a minute to continue improving Wikipedia? Check out these editing suggestions.</string>
-    <string name="suggested_edits_rewards_contribution"><![CDATA[Wow, that was your %s <b>contribution</b> to Wikipedia with Suggested edits.]]></string>
-    <string name="suggested_edits_rewards_edit_streak"><![CDATA[You\'re on a <b>edit streak</b> for %1$s days.  Keep it going, %2$s!]]></string>
-    <string name="suggested_edits_rewards_pageviews"><![CDATA[Your edits have earned %1$d <b>pageviews</b> in the last %2$s days.]]></string>
-    <string name="suggested_edits_rewards_edit_quality"><![CDATA[Your <b>edit quality</b> is %s. We look forward to your next edits.]]></string>
+    <string name="suggested_edits_rewards_contribution">You\'ve made %s contributions to Wikipedia using Suggested edits. Thank you!</string>
+    <string name="suggested_edits_rewards_edit_streak">You\'ve edited every day for %1$d days so far. Keep the streak going, %2$s!</string>
+    <string name="suggested_edits_rewards_pageviews">Your edits have been seen by %s people in the last 30 days. Thanks, and keep going!</string>
+    <string name="suggested_edits_rewards_edit_quality">Your edits so far are %s. Keep going! We look forward to your contributions.</string>
     <string name="suggested_edits_rewards_continue_button">Continue</string>
     <!-- /Suggested edits -->
 
