--- a/app/src/main/res/values-qq/strings.xml
+++ b/app/src/main/res/values-qq/strings.xml
@@ -862,4 +862,11 @@
   <string name="suggested_edits_type_image_tag">Text indicating that the user edit was an Image tag edit</string>
   <string name="suggested_edits_contributions_screen_title">Contributions screen title text. The %s symbol is replaced with the username.</string>
   <string name="suggested_edits_spinner_item_text">Contributions filter dropdown item text. %1$d represents the count of the edit type. %2$s is the type of the edit.</string>
+  <string name="suggested_edits_language_label">Text label indicating that the associated data indicates the language of the user contribution.</string>
+  <string name="suggested_edits_date_time_label">Text label indicating that the associated data indicates the date and time of the user contribution.</string>
+  <string name="suggested_edits_type_label">Text label indicating that the associated data indicates the type of the user contribution.</string>
+  <string name="suggested_edits_contribution_label">Text summarizing the user\'s contribution to the article or image. %d represents the number of characters contributed.</string>
+  <string name="suggested_edits_contribution_views">Text label indicating that the associated data indicates the number of views that the contribution has. %s represents the type of contribution.</string>
+  <string name="suggested_edits_image_label">Text label that indicates that the contribution is to an image file.</string>
+  <string name="suggested_edits_article_label">Text label that indicates that the contribution is to an article.</string>
 </resources>
