--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -785,6 +785,7 @@
     <string name="suggested_edits_type_image_tag">Image tag</string>
     <string name="suggested_edits_contributions_screen_title">%s\'s contributions</string>
     <string name="suggested_edits_spinner_item_text">%1$d %2$s</string>
+    <string name="suggested_edits_contribution_seen_text">Seen %d times in the past 30 days.</string>
     <!-- /Suggested edits -->
 
     <!-- Description editing revert help -->
